<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.login.LoginFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/login"
        android:textAppearance="@style/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape2"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="23dp"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColorHint="@color/lightpurple"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/button_shape2"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:paddingVertical="6dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColorHint="@color/lightpurple"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:text="@string/login"
        android:textAppearance="@style/register_login"
        app:layout_constraintStart_toStartOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

    <CheckBox
        android:id="@+id/rememberMeChkBox"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginBtn"
        app:layout_constraintStart_toEndOf="@+id/loginBtn"
        app:layout_constraintTop_toTopOf="@+id/loginBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_shape"
        android:text="@string/register"
        android:textAppearance="@style/register_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBtn" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_upper_elipse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_lower_elipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>